--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
   - command: zsh
   - command: git clone --depth 1 "https://github.com/Baneeishaque/gitpod-workspace-full-vnc-1366x768-tint2-pcmanfm-zsh-android-studio.git" android-studio-config && mkdir -p ~/.config/Google && ln -s `pwd`/android-studio-config/AndroidStudio4.1-config ~/.config/Google/AndroidStudio4.1 && mkdir -p ~/.local/share/Google && ln -s `pwd`/android-studio-config/AndroidStudio4.1-local ~/.local/share/Google/AndroidStudio4.1 && cd /usr/local/android-studio/bin/ && ./studio.sh
   - command: git clone --depth 1 "https://github.com/Baneeishaque/gitpod-workspace-full-vnc-1366x768-tint2-pcmanfm-zsh-android-studio-gh-chrome-intellij-idea.git" intellij-idea-config && mkdir -p ~/.config/JetBrains && ln -s `pwd`/intellij-idea-config/IntelliJIdea2021.1-config ~/.config/JetBrains/IntelliJIdea2021.1 && mkdir -p ~/.local/share/JetBrains && ln -s `pwd`/android-studio-config/IntelliJIdea2021.1-local ~/.local/share/JetBrains/IntelliJIdea2021.1 && cd /usr/local/idea-IU-211.6693.111/bin/ && ./idea.sh
-  - command: mkdir -p ~/.config/JetBrains && ln -s `pwd`/Pycharm2021.1-config ~/.config/JetBrains/PyCharm2021.1 && mkdir -p ~/.local/share/JetBrains && ln -s `pwd`/Pycharm2021.1-local ~/.local/share/JetBrains/PyCharm2021.1 && cd /usr/local/pycharm-2021.1/bin/ && ./pycharm.sh
+  - command: rm -rf ~/.config/JetBrains/PyCharm2021.1 && mkdir -p ~/.config/JetBrains && ln -s `pwd`/Pycharm2021.1-config ~/.config/JetBrains/PyCharm2021.1 && mkdir -p ~/.local/share/JetBrains && ln -s `pwd`/Pycharm2021.1-local ~/.local/share/JetBrains/PyCharm2021.1 && cd /usr/local/pycharm-2021.2/bin/ && ./pycharm.sh
   # - init: gh auth login
   - command: google-chrome --disable-dev-shm-usage
 
